@@ -50,10 +50,10 @@ Now we use subtyping to make this file a report.
     >>> from zope.component import getUtility
     >>> subtyper = getUtility(ISubtyper)
     >>> possible_types = [x.name for x in subtyper.possible_types(myreport)]
-    >>> 'eea.reports.PublicationReport' in possible_types
+    >>> 'eea.reports.FolderReport' in possible_types
     True
     >>> subtyper.existing_type(myreport).name
-    'eea.reports.PublicationReport'
+    'eea.reports.FolderReport'
 
 Now we load a demonstration pdf file from doc/test.pdf which has the following
 metadata set within the pdf file:
